fix: fixed burger menu overflow body

--- a/shelter/pages/main/styles/base.scss
+++ b/shelter/pages/main/styles/base.scss
@@ -32,6 +32,7 @@ $button-color: #292929;
 }
 body {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 a {
   color: inherit;
